--- a/Week 1-2 - general intro to exploratory modelling/assignment 2 - lakemodel.ipynb
+++ b/Week 1-2 - general intro to exploratory modelling/assignment 2 - lakemodel.ipynb
@@ -113,28 +113,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-04-07T13:56:55.061449Z",
-     "end_time": "2023-04-07T13:56:55.062961Z"
+     "end_time": "2023-05-11T15:12:28.452139600Z",
+     "start_time": "2023-05-11T15:12:28.338785900Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<ema_workbench.em_framework.util.NamedObjectMap object at 0x00000255097B3210>\n"
+     ]
+    }
+   ],
    "source": [
     "from lakemodel_function import lake_problem\n",
+    "from ema_workbench import (Model, RealParameter, ScalarOutcome)\n",
     "\n",
     "# Instantiate the model\n",
-    "\n",
+    "lake_model = Model('lakeproblem', function=lake_problem)\n",
+    "lake_model.time_horizon = 100\n",
     "\n",
     "# Specify uncertainties\n",
-    "\n",
+    "lake_problem.uncertainties = [RealParameter('mean', 0.01, 0.05, default=0.02),\n",
+    "                       RealParameter('std', 0.001, 0.005, default=0.0017),\n",
+    "                       RealParameter('b', 0.1, 0.45, default=0.42),\n",
+    "                       RealParameter('q', 2, 4.5, default=2),\n",
+    "                       RealParameter('delta', 0.93, 0.99, default=0.98)]\n",
     "\n",
     "# Set levers, one for each time step\n",
-    "\n",
+    "lake_model.levers = [RealParameter(f\"l{i}\", 0, 0.1) for i in\n",
+    "                     range(lake_model.time_horizon)] # we use time_horizon here\n",
+    "print(lake_model.levers)\n",
     "\n",
     "# Specify outcomes\n",
-    "\n"
+    "lake_model.outcomes = [ScalarOutcome('max_P'),\n",
+    "                       ScalarOutcome('utility'),\n",
+    "                       ScalarOutcome('interita'),\n",
+    "                       ScalarOutcome('reliability')]"
    ]
   },
   {
@@ -148,16 +167,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-04-07T13:56:55.065245Z",
-     "end_time": "2023-04-07T13:56:55.065750Z"
+     "end_time": "2023-05-22T15:53:37.744557200Z",
+     "start_time": "2023-05-22T15:53:36.845150500Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[MainProcess/INFO] performing 1000 scenarios * 1 policies * 1 model(s) = 1000 experiments\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "  0%|                                                 | 0/1000 [00:00<?, ?it/s]\u001B[A\u001B[A\u001B[A\u001B[A[MainProcess/INFO] performing experiments sequentially\n",
+      "  0%|                                             | 0/1000 [103:02:12<?, ?it/s]\n"
+     ]
+    },
+    {
+     "ename": "EMAError",
+     "evalue": "some fatal error has occurred while running the experiments, not all runs have completed. expected 1000, got 0",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mEMAError\u001B[0m                                  Traceback (most recent call last)",
+      "Cell \u001B[1;32mIn[13], line 10\u001B[0m\n\u001B[0;32m      7\u001B[0m policy \u001B[38;5;241m=\u001B[39m Policy(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mno release\u001B[39m\u001B[38;5;124m\"\u001B[39m, \u001B[38;5;241m*\u001B[39m\u001B[38;5;241m*\u001B[39m{l\u001B[38;5;241m.\u001B[39mname:\u001B[38;5;241m0\u001B[39m \u001B[38;5;28;01mfor\u001B[39;00m l \u001B[38;5;129;01min\u001B[39;00m lake_model\u001B[38;5;241m.\u001B[39mlevers})\n\u001B[0;32m      9\u001B[0m n_scenarios \u001B[38;5;241m=\u001B[39m \u001B[38;5;241m1000\u001B[39m\n\u001B[1;32m---> 10\u001B[0m results \u001B[38;5;241m=\u001B[39m \u001B[43mperform_experiments\u001B[49m\u001B[43m(\u001B[49m\u001B[43mlake_model\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mn_scenarios\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mpolicy\u001B[49m\u001B[43m)\u001B[49m\n\u001B[0;32m     11\u001B[0m \u001B[38;5;28mprint\u001B[39m(results)\n",
+      "File \u001B[1;32m~\\PyCharm\\Model-Based Decision Making\\Lib\\site-packages\\ema_workbench\\em_framework\\evaluators.py:571\u001B[0m, in \u001B[0;36mperform_experiments\u001B[1;34m(models, scenarios, policies, evaluator, reporting_interval, reporting_frequency, uncertainty_union, lever_union, outcome_union, uncertainty_sampling, lever_sampling, callback, return_callback, combine, log_progress)\u001B[0m\n\u001B[0;32m    568\u001B[0m evaluator\u001B[38;5;241m.\u001B[39mevaluate_experiments(scenarios, policies, callback, combine\u001B[38;5;241m=\u001B[39mcombine)\n\u001B[0;32m    570\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m callback\u001B[38;5;241m.\u001B[39mi \u001B[38;5;241m!=\u001B[39m nr_of_exp:\n\u001B[1;32m--> 571\u001B[0m     \u001B[38;5;28;01mraise\u001B[39;00m EMAError(\n\u001B[0;32m    572\u001B[0m         (\n\u001B[0;32m    573\u001B[0m             \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124msome fatal error has occurred while \u001B[39m\u001B[38;5;124m\"\u001B[39m\n\u001B[0;32m    574\u001B[0m             \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mrunning the experiments, not all runs have \u001B[39m\u001B[38;5;124m\"\u001B[39m\n\u001B[0;32m    575\u001B[0m             \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mcompleted. expected \u001B[39m\u001B[38;5;132;01m{}\u001B[39;00m\u001B[38;5;124m, got \u001B[39m\u001B[38;5;132;01m{}\u001B[39;00m\u001B[38;5;124m\"\u001B[39m\n\u001B[0;32m    576\u001B[0m         )\u001B[38;5;241m.\u001B[39mformat(nr_of_exp, callback\u001B[38;5;241m.\u001B[39mi)\n\u001B[0;32m    577\u001B[0m     )\n\u001B[0;32m    579\u001B[0m _logger\u001B[38;5;241m.\u001B[39minfo(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mexperiments finished\u001B[39m\u001B[38;5;124m\"\u001B[39m)\n\u001B[0;32m    581\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m return_callback:\n",
+      "\u001B[1;31mEMAError\u001B[0m: some fatal error has occurred while running the experiments, not all runs have completed. expected 1000, got 0"
+     ]
+    }
+   ],
    "source": [
-    "# Hint: A great moment to take another look at the examples!\n"
+    "# Hint: A great moment to take another look at the examples!\n",
+    "from ema_workbench import Policy, perform_experiments\n",
+    "from ema_workbench import ema_logging\n",
+    "\n",
+    "ema_logging.log_to_stderr(ema_logging.INFO)\n",
+    "\n",
+    "policy = Policy(\"no release\", **{l.name:0 for l in lake_model.levers})\n",
+    "\n",
+    "n_scenarios = 1000\n",
+    "results = perform_experiments(lake_model, n_scenarios, policy)\n",
+    "print(results)"
    ]
   },
   {
@@ -172,14 +227,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "start_time": "2023-04-07T13:56:55.068135Z",
-     "end_time": "2023-04-07T13:56:55.068641Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "experiments, outcomes = results\n",
+    "\n",
+    "sns.pairplot(pd.Dataframe.from_dict(outcomes))\n",
+    "plt.show()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -196,12 +251,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "start_time": "2023-04-07T13:56:55.071076Z",
-     "end_time": "2023-04-07T13:56:55.071581Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
